Compele about me layout

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -17,6 +17,6 @@
   "bio": "bio",
   "interests": "interests",
   "education": "education",
-  "highSchool": "high-school",
+  "courses": "courses",
   "university": "university"
 }
