--- a/assets/locales/ru.json
+++ b/assets/locales/ru.json
@@ -17,6 +17,6 @@
   "bio": "биография",
   "interests": "интересы",
   "education": "образование",
-  "highSchool": "школа",
+  "courses": "курсы",
   "university": "университет"
 }
