About me desktop layout update

--- a/assets/locales/ru.json
+++ b/assets/locales/ru.json
@@ -18,5 +18,10 @@
   "interests": "интересы",
   "education": "образование",
   "courses": "курсы",
-  "university": "университет"
+  "university": "университет",
+  "skills": "навыки",
+  "experience": "опыт",
+  "books": "книги",
+  "games": "игры",
+  "music": "музыка"
 }
