--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -18,5 +18,10 @@
   "interests": "interests",
   "education": "education",
   "courses": "courses",
-  "university": "university"
+  "university": "university",
+  "skills": "skills",
+  "experience": "experience",
+  "books": "books",
+  "games": "games",
+  "music": "music"
 }
