--- a/assets/locales/ru.json
+++ b/assets/locales/ru.json
@@ -23,5 +23,7 @@
   "experience": "опыт",
   "books": "книги",
   "games": "игры",
-  "music": "музыка"
+  "music": "музыка",
+  "projects": "проекты",
+  "all": "все"
 }
