--- a/assets/locales/ru.json
+++ b/assets/locales/ru.json
@@ -5,6 +5,19 @@
     "projects": "_проекты",
     "contactMe": "_связаться-со-мной"
   },
+  "form": {
+    "name": "_имя:",
+    "email": "_почта:",
+    "message": "_сообщение:",
+    "submit": "отправить-сообщение",
+    "sendNew": "отправить-новое-сообщение",
+    "thankYou": "Спасибо! 🤘",
+    "sendedMessage": "Ваше сообщение было принято. Вы получите ответ очень скоро!",
+    "placeholder": {
+      "name": "Шахзод Давлатов",
+      "message": "Привет! Только что посетил твой сайт, и он выглядит потрясающе!"
+    }
+  },
   "greeting": "Привет, меня зовут",
   "name": "Шахзод Давлатов",
   "developer": "Frontend разработчик",
